@@ -42,6 +42,7 @@
 #include "dlvhex/BuiltinAtomTable.hpp"
 #include "dlvhex/AggregateAtomTable.hpp"
 #include "dlvhex/ExternalAtomTable.hpp"
+#include "dlvhex/ModuleAtomTable.hpp"
 #include "dlvhex/RuleTable.hpp"
 #include "dlvhex/ASPSolverManager.h"
 #include "dlvhex/Interpretation.hpp"
@@ -87,6 +88,7 @@ struct Registry:
   BuiltinAtomTable batoms;
   AggregateAtomTable aatoms;
   ExternalAtomTable eatoms;
+  ModuleAtomTable matoms;
   RuleTable rules;
 
   NamespaceTable namespaces;
